[package]
name = "mytest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mytest"
crate-type = ["cdylib"]

[features]
python = ["pyo3"]
julia = []

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"], optional = true }
